# stellar-memory-core

./: .dockerignore  .gitignore  .mcp.json  .npmignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  electron-builder.yml  index.html  package-lock.json  package.json  server.json  vitest.config.ts
.claude/: launch.json
.github/workflows/: ci.yml
benchmarks/: README.md  corona-cache.ts  embedding-speed.ts  importance-decay.ts  index.ts  retrieval-accuracy.ts  search-latency.ts
benchmarks/data/: test-memories.json
clients/python/: README.md  pyproject.toml
clients/python/examples/: basic_usage.py  claude_integration.py
clients/python/stellar_memory/: __init__.py  client.py  exceptions.py  types.py
docs/: claude-code-integration.md  mcp-config-example.json  show-hn-draft.md  stm-improvement-roadmap.md
electron/: main.ts  preload.ts  tsconfig.json
scripts/: check-node.mjs  cleanup-garbage-memories.mjs  generate-icons.mjs  init.mjs  launch.bat  setup.mjs
src/: index.ts
tests/: cloud-types.test.ts  content-weight.test.ts  dedup.test.ts  embedding.test.ts  git-scanner.test.ts  gravity-vector.test.ts  gravity.test.ts  ledger.test.ts  logger.test.ts  mcp-server.test.ts  observation.test.ts  orbit.test.ts  parsers.test.ts  planet.test.ts  scanner.test.ts  scheduler.test.ts  session-policy.test.ts  setup.ts  sleep-consolidation.test.ts  sun.test.ts  temporal.test.ts  time.test.ts  tokenizer.test.ts  vec.test.ts
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
(+141 files in other folders)
